# veretino

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  Release Notes.txt  release_notes.txt  veretino.pro
include/: qmicroz.h
makeScripts/: info.txt  makeAppImage.sh  makeInstall.sh  makeInstall_cmake.sh  makeInstall_qt6.sh  uninstallVeretino.sh
res/: resources.qrc  veretino.desktop  win_ico.rc
scripts/: info.txt  makeAppImage.sh  make_install.sh  uninstall.sh  uninstall_remove.sh
src/: CMakeLists.txt  aboutdialog.cpp  aboutdialog.h  aboutdialog.ui  algostring.cpp  algostring.h  backupfile.cpp  backupfile.h  clickablelabel.cpp  clickablelabel.h  datacontainer.cpp  datacontainer.h  datamaintainer.cpp  datamaintainer.h  dbfileextension.cpp  dbfileextension.h  dbstatistics.cpp  dbstatistics.h  dbstatusdialog.cpp  dbstatusdialog.h  dbstatusdialog.ui  dialogabout.cpp  dialogabout.h  dialogabout.ui  dialogcontentslist.cpp  dialogcontentslist.h  dialogcontentslist.ui  dialogdbcreation.cpp  dialogdbcreation.h  dialogdbcreation.ui  dialogdbstatus.cpp  dialogdbstatus.h  dialogdbstatus.ui  dialogexistingdbs.cpp  dialogexistingdbs.h  dialogexistingdbs.ui  dialogfileprocresult.cpp  dialogfileprocresult.h  dialogfileprocresult.ui  dialogfoldercontents.cpp  (+78 more)
src/pathstr/: CMakeLists.txt  LICENSE  README.md  pathstr.cpp  pathstr.h  test_pathstr.cpp
submodules/: CMakeLists.txt
